Fix scrollbars

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ html, body {
   background-color: #000;
 }
 
-#container {
+#container, #content {
   width: 100%;
   height: 100%;
   margin: 0;
